--- a/HelloMessageQueue/src/main/resources/application.yml
+++ b/HelloMessageQueue/src/main/resources/application.yml
@@ -2,6 +2,8 @@ spring:
   rabbitmq:
     host: localhost
     port: 5672
+    username: guestuser
+    password: guestuser
     stream:
       username: guestuser
       password: guestuser
