application.yml 에 retry 설정을 통한 DeadLetter 재처리

--- a/HelloMessageQueue/src/main/resources/application.yml
+++ b/HelloMessageQueue/src/main/resources/application.yml
@@ -7,6 +7,14 @@ spring:
     stream:
       username: guestuser
       password: guestuser
+    listener:
+      simple:
+        retry:
+          enabled: true
+          initial-interval: 1000
+          max-attempts: 3
+          max-interval: 1000
+        default-requeue-rejected: false # 재시도 실패 시 자동으로 DLQ 이동
   application:
     name: HelloMessageQueue
 server:
