--- a/HelloMessageQueue/src/main/resources/application.yml
+++ b/HelloMessageQueue/src/main/resources/application.yml
@@ -17,5 +17,21 @@ spring:
         default-requeue-rejected: false # 재시도 실패 시 자동으로 DLQ 이동
   application:
     name: HelloMessageQueue
+  datasource:
+    url: jdbc:h2:mem:testdb
+    driver-class-name: org.h2.Driver
+    username: sa
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        format_sql: TRUE
+        dialect: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 server:
   port: 8080
