--- a/HelloMessageQueue/src/main/resources/application.yml
+++ b/HelloMessageQueue/src/main/resources/application.yml
@@ -27,8 +27,9 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        format_sql: TRUE
+        format_sql: true
         dialect: org.hibernate.dialect.H2Dialect
+    show-sql: true
   h2:
     console:
       enabled: true
